Fix scroll jump when modal is opened

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,7 +8,21 @@ body {
     -webkit-font-smoothing: antialiased;
     overflow-x: hidden;
     max-width: 100vw;
+
+    &.menu-is-open {
+        position: fixed; 
+        height: auto; 
+        width: 100%; 
+        overflow: hidden scroll; 
+        top: 0px; 
+        left: 0px;
+    }
+
+    &.modal-is-open {
+        overflow: hidden;
+    }
 }
+
 
 .container-fluid {
     width: $full_width;
