--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -6,7 +6,7 @@
     display: block;
     height: 100%;
     left: 0;
-    overflow: auto;
+    overflow: hidden;
     position: fixed;
     top: 0;
     width: 100%;
